# dream_analyser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: dream_analyser.yaml
.github/workflows/: build.yml  dream_analyser.yml
dream_interpreter/: __init__.py  analyser.py  database.py  main.py  models.py  symbol_generator.py
tests/: __init__.py  test_analyser.py  test_api.py  test_symbol_generator.py
